ULTIMA VERSION(forms de platos) dirigida 3

--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -168,6 +168,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="MealsForm.resx">
+      <DependentUpon>MealsForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProyectMainForm.resx">
       <DependentUpon>ProyectMainForm.h</DependentUpon>
     </EmbeddedResource>
