--- a/ProyectView/ProyectView.vcxproj.filters
+++ b/ProyectView/ProyectView.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="Sugesstions.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="MealsGraphicsForm.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProyectView.cpp">
@@ -84,6 +87,9 @@
     </ClCompile>
     <ClCompile Include="Sugesstions.cpp">
       <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="MealsGraphicsForm.cpp">
+      <Filter>Archivos de encabezado</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
