--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="MealsForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="MealsGraphicsForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="MealsSearchForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -160,6 +163,7 @@
     <ClCompile Include="Client_InfoForm.cpp" />
     <ClCompile Include="LoginForm.cpp" />
     <ClCompile Include="MealsForm.cpp" />
+    <ClCompile Include="MealsGraphicsForm.cpp" />
     <ClCompile Include="MealsSearchForm.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -181,6 +185,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -200,6 +205,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MealsForm.resx">
       <DependentUpon>MealsForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MealsGraphicsForm.resx">
+      <DependentUpon>MealsGraphicsForm.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MealsSearchForm.resx">
       <DependentUpon>MealsSearchForm.h</DependentUpon>
