--- a/ProjectModel/ProjectModel.vcxproj
+++ b/ProjectModel/ProjectModel.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sale.h" />
     <ClInclude Include="SaleDetail.h" />
+    <ClInclude Include="Suggestions.h" />
     <ClInclude Include="TableDetail.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
@@ -145,6 +146,7 @@
     <ClCompile Include="ProjectModel.cpp" />
     <ClCompile Include="Sale.cpp" />
     <ClCompile Include="SaleDetail.cpp" />
+    <ClCompile Include="Suggestions.cpp" />
     <ClCompile Include="TableDetail.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
