--- a/ProyectView/ProyectView.vcxproj.filters
+++ b/ProyectView/ProyectView.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="PedidosForm.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Search_Client_InfoForm.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProyectView.cpp">
@@ -108,6 +111,9 @@
     </ClCompile>
     <ClCompile Include="PedidosForm.cpp">
       <Filter>Archivos de encabezado</Filter>
+    </ClCompile>
+    <ClCompile Include="Search_Client_InfoForm.cpp">
+      <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
