Fromulario  buscar cliente

--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -149,6 +149,9 @@
     <ClInclude Include="RecoverForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="SearchTableDetailForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Search_Client_InfoForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -189,6 +192,7 @@
     <ClCompile Include="ProyectView.cpp" />
     <ClCompile Include="RecoverForm.cpp" />
     <ClCompile Include="SaleForm.cpp" />
+    <ClCompile Include="SearchTableDetailForm.cpp" />
     <ClCompile Include="Search_Client_InfoForm.cpp" />
     <ClCompile Include="Sugesstions.cpp" />
     <ClCompile Include="UserForm.cpp" />
@@ -233,6 +237,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RecoverForm.resx">
       <DependentUpon>RecoverForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SearchTableDetailForm.resx">
+      <DependentUpon>SearchTableDetailForm.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Search_Client_InfoForm.resx">
       <DependentUpon>Search_Client_InfoForm.h</DependentUpon>
