--- a/ProyectView/ProyectView.vcxproj.filters
+++ b/ProyectView/ProyectView.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="SearchTableDetailForm.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Search_ClientForm.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProyectView.cpp">
@@ -120,6 +123,9 @@
     </ClCompile>
     <ClCompile Include="SearchTableDetailForm.cpp">
       <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Search_ClientForm.cpp">
+      <Filter>Archivos de encabezado</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
