--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="SearchClientInfoForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="SearchPlatos.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="SearchTableDetailForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -203,6 +206,7 @@
     <ClCompile Include="RegisterClientForm.cpp" />
     <ClCompile Include="SaleForm.cpp" />
     <ClCompile Include="SearchClientInfoForm.cpp" />
+    <ClCompile Include="SearchPlatos.cpp" />
     <ClCompile Include="SearchTableDetailForm.cpp" />
     <ClCompile Include="Search_ClientForm.cpp" />
     <ClCompile Include="Search_Client_InfoForm.cpp" />
@@ -255,6 +259,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SearchClientInfoForm.resx">
       <DependentUpon>SearchClientInfoForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SearchPlatos.resx">
+      <DependentUpon>SearchPlatos.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchTableDetailForm.resx">
       <DependentUpon>SearchTableDetailForm.h</DependentUpon>
