--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -167,6 +167,9 @@
     <ClInclude Include="SearchUserForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="SearchVentasForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Search_ClientForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -216,6 +219,7 @@
     <ClCompile Include="SearchPlatos.cpp" />
     <ClCompile Include="SearchTableDetailForm.cpp" />
     <ClCompile Include="SearchUserForm.cpp" />
+    <ClCompile Include="SearchVentasForm.cpp" />
     <ClCompile Include="Search_ClientForm.cpp" />
     <ClCompile Include="Search_Client_InfoForm.cpp" />
     <ClCompile Include="Sugesstions.cpp" />
@@ -279,6 +283,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SearchUserForm.resx">
       <DependentUpon>SearchUserForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SearchVentasForm.resx">
+      <DependentUpon>SearchVentasForm.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Search_ClientForm.resx">
       <DependentUpon>Search_ClientForm.h</DependentUpon>
