--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -128,6 +128,9 @@
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ChatForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Client_InfoForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -199,6 +202,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="ChatForm.cpp" />
     <ClCompile Include="Client_InfoForm.cpp" />
     <ClCompile Include="LoginForm.cpp" />
     <ClCompile Include="MealsForm.cpp" />
@@ -249,6 +253,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ChatForm.resx">
+      <DependentUpon>ChatForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Client_InfoForm.resx">
       <DependentUpon>Client_InfoForm.h</DependentUpon>
     </EmbeddedResource>
