--- a/ProyectView/ProyectView.vcxproj
+++ b/ProyectView/ProyectView.vcxproj
@@ -146,6 +146,9 @@
     <ClInclude Include="MealsSearchForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="ModifySuggestionsForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="PedidosForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -208,6 +211,7 @@
     <ClCompile Include="MealsForm.cpp" />
     <ClCompile Include="MealsGraphicsForm.cpp" />
     <ClCompile Include="MealsSearchForm.cpp" />
+    <ClCompile Include="ModifySuggestionsForm.cpp" />
     <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -270,6 +274,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MealsSearchForm.resx">
       <DependentUpon>MealsSearchForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifySuggestionsForm.resx">
+      <DependentUpon>ModifySuggestionsForm.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PedidosForm.resx">
       <DependentUpon>PedidosForm.h</DependentUpon>
